Fix review rendering.
Broken in 5ab21ca2bd9205ef351f79fd781cdaacfe9681f5.
Fix using display: flex.

--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -156,6 +156,5 @@ table.pltable {
 	width: 100%;
 	padding-left: 0;
 	padding-right: 0;
-	float: none;
 }
 }
